# udi

./: .gitignore  DESIGN.md  PROTOCOL.md  debug.bashrc
docs/: TODO.md
libudi/: Cargo.toml  build.rs
libudi-c/: Cargo.toml
libudi-c-tests/: Cargo.toml  build.rs
libudi-c-tests/tests/: breakpoint.rs  create.rs
libudi-c-tests/tests/native_file_tests/: mod.rs
libudi-c-tests/tests/udi_ffi/: mod.rs
libudi-c-tests/tests/utils/: mod.rs
libudi-c/src/: lib.rs  libudi.h
libudi-java/api/src/main/java/net/libudi/api/: UdiProcess.java  UdiProcessConfig.java  UdiProcessManager.java
libudi-java/api/src/main/java/net/libudi/api/event/: EventType.java
libudi-java/jni/src/main/java/net/libudi/api/jni/impl/: UdiProcessImpl.java  UdiProcessManagerImpl.java  UdiThreadImpl.java
libudi-java/test/: pom.xml
libudi-java/test/src/test/java/net/libudi/api/ut/: BaseApiUt.java
libudi/src/: create.rs  error.rs  errors.rs  events.rs  lib.rs  process.rs  protocol.rs  thread.rs
libudi/tests/: breakpoint.rs  create.rs  singlestep.rs  thread.rs
libudi/tests/utils/: mod.rs
libudirt/: SConstruct
libudirt/libudicommon/: SConscript  udi-common.h
libudirt/src/: SConscript  udi.h  udirt-darwin-x86-64.c  udirt-linux-x86.c  udirt-malloc.c  udirt-msg.c  udirt-platform.h  udirt-posix-darwin.c  udirt-posix-linux-gnu.c  udirt-posix-pthreads.c  udirt-posix-sys.c  udirt-posix.c  udirt-posix.h  udirt-req.c  udirt-x86.c  udirt.c  udirt.h
libudirt/tests/: SConscript  mock-lib.c  mock-lib.h  read-test-req.c  udi-log.c
libudirt/tests/src/: SConscript
(+4 files in other folders)
