[package]
name = "udi"
version = "0.1.0"
authors = ["Dan McNulty <dkmcnulty@gmail.com>"]
build = "build.rs"

[dependencies]

users = "0.5.2"
serde =  "0.9"
serde_derive = "0.9"
serde_cbor = "0.5.2"
mio = "0.6.6"
downcast-rs = "1.0.0"

[build-dependencies]
native_file_tests = { path = "../../native-file-tests/rust-binding" }
